# cognic-agent-bank-analyst

./: .gitignore  AGENT.md  README.md  agent-card.pub  cognic-pack-manifest.toml  cosign.pub  pyproject.toml
.github/workflows/: ci.yml  sign-and-publish.yml
agent_cards/: agent-card.json
src/cognic_agent_bank_analyst/: __init__.py  marker.py
tests/: test_agent_md.py  test_kernel_validate.py  test_manifest_consistency.py  test_marker_inertness.py  test_release_policy.py
